--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
+
 
 .navbar-nav 
 .cart-badge {
@@ -9,14 +14,20 @@ body {
     right: 10;
     background-color: #008cff;
     color: white;
-    padding: 10px 12px;
+    height: 30px;
+    width: 30px;
+    padding-top: 2px;
+    text-align: center;
     border-radius: 50%;
-    margin-left: 5px;
-    margin-top: 2px;
+    /*padding: 10px 12px;
+    *//*border-radius: 50%;
+    /*margin-top: 2px;
+    */;
 }
 
+
 .navbar-nav .cart-total {
-    margin-left: 10px;
+    margin-left: 50px;
 }
 
 .product-card {
@@ -27,7 +38,7 @@ body {
 
 .product-card img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -36,8 +47,10 @@ body {
 }
 
 .product-card .card-title {
-    font-weight: bold;
+    font-size: 1rem;
+    font-weight: 600;
     margin-bottom: 5px;
+    color: #5b6bff;
 }
 
 .product-card .card-text {
@@ -73,4 +86,207 @@ body {
 
 .cart-container .table .actions button {
     width: 100%;
+}
+
+.cart{
+    border: 2px solid greenyellow;
+    border-radius: 50px;
+    background-color: black;
+    color: white;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* another code */
+.yes input:checked+span {
+    background-color: #00e498;
+}
+
+.no input:checked+span {
+    background-color: #e40057;
+}
+
+.unknown input:checked+span {
+    background-color: #005be4;
+}
+
+div label input {
+    margin-right: 100px;
+}
+
+.cat {
+    margin: 4px;
+    background-color: #000000;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    overflow: hidden;
+    float: left;
+    transition: ease-in-out 0.3s;
+}
+
+.cat:hover {
+    margin: 4px;
+    background-color: #1dc08a;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    overflow: hidden;
+    float: left;
+    transition: ease-in-out 0.3s;
+}
+
+.cat label {
+    float: left;
+    line-height: 3em;
+    width: 8em;
+    height: 3em;
+}
+
+.cat label span {
+    text-align: center;
+    padding: 3px 0;
+    display: block;
+}
+
+.cat label input {
+    position: absolute;
+    display: none;
+    color: #fff !important;
+}
+
+/* selects all of the text within the input element and changes the color of the text */
+.cat label input+span {
+    color: #fff;
+}
+
+/* This will declare how a selected input will look giving generic properties */
+.cat input:checked+span {
+    color: #ffffff;
+}
+
+.button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 3px;
+    transition: ease-in-out 0.3s;
+
+}
+
+.button:hover {
+    background-color: #00dd88;
+    color: white;
+    transition: ease-in-out 0.3s;
+    -webkit-transition: ease-in-out 0.3s;
+    -moz-transition: ease-in-out 0.3s;
+    -ms-transition: ease-in-out 0.3s;
+    -o-transition: ease-in-out 0.3s;
+}
+
+.button.selected {
+    background-color: #00dd88;
+}
+
+.button-submit {
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    transition: ease-in-out 0.3s;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.button-submit:hover {
+    background-color: #00dd88;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    transition: ease-in-out 0.3s;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.card {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    transition: ease-in-out 0.4s;
+    border: none;
+}
+
+.card:hover {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transition: ease-in-out 0.4s;
+    -webkit-transition: ease-in-out 0.4s;
+    -moz-transition: ease-in-out 0.4s;
+    -ms-transition: ease-in-out 0.4s;
+    -o-transition: ease-in-out 0.4s;
+}
+
+.form-control:focus,
+.form-select-sm:focus {
+    color: #ffffff;
+    box-shadow: none;
+    border-color: #6e34f4;
+    box-shadow: 0 0px 5.5px #e3d7ff;
+    transition: ease-in-out 0.2s;
+    -webkit-transition: ease-in-out 0.2s;
+    -moz-transition: ease-in-out 0.2s;
+    -ms-transition: ease-in-out 0.2s;
+    -o-transition: ease-in-out 0.2s;
+}
+
+
+.custom-button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 3px;
+    transition: ease-in-out 0.3s;
+}
+
+.custom-button:hover {
+    background-color: #00dd88;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 3px;
+    transition: ease-in-out 0.3s;
+    -webkit-transition: ease-in-out 0.3s;
+    -moz-transition: ease-in-out 0.3s;
+    -ms-transition: ease-in-out 0.3s;
+    -o-transition: ease-in-out 0.3s;
+}
+
+.custom-button.selected {
+    background-color: #00dd88;
+    color: white;
+
 }
