--- a/style.css
+++ b/style.css
@@ -25,21 +25,24 @@ body {
     */;
 }
 
+#bor{
+    border: none;
+}
 
 .navbar-nav .cart-total {
     margin-left: 50px;
 }
 
-.product-card {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    overflow: hidden;
-}
 
 .product-card img {
     width: 100%;
     height: 300px;
     object-fit: cover;
+    border-radius: 8px 8px 0px 0px;
+    -webkit-border-radius: 8px 8px 0px 0px;
+    -moz-border-radius: 8px 8px 0px 0px;
+    -ms-border-radius: 8px 8px 0px 0px;
+    -o-border-radius: 8px 8px 0px 0px;
 }
 
 .product-card .card-body {
@@ -48,9 +51,9 @@ body {
 
 .product-card .card-title {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 5px;
-    color: #5b6bff;
+    color: #141414;
 }
 
 .product-card .card-text {
@@ -93,10 +96,6 @@ body {
     border-radius: 50px;
     background-color: black;
     color: white;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
 }
 
 
@@ -105,97 +104,31 @@ body {
 
 
 
-
-
-
-
-/* another code */
-.yes input:checked+span {
-    background-color: #00e498;
-}
-
-.no input:checked+span {
-    background-color: #e40057;
-}
-
-.unknown input:checked+span {
-    background-color: #005be4;
-}
-
-div label input {
-    margin-right: 100px;
-}
-
-.cat {
-    margin: 4px;
-    background-color: #000000;
-    border-radius: 4px;
-    border: 1px solid #fff;
-    overflow: hidden;
-    float: left;
-    transition: ease-in-out 0.3s;
-}
-
-.cat:hover {
-    margin: 4px;
-    background-color: #1dc08a;
-    border-radius: 4px;
-    border: 1px solid #fff;
-    overflow: hidden;
-    float: left;
-    transition: ease-in-out 0.3s;
-}
-
-.cat label {
-    float: left;
-    line-height: 3em;
-    width: 8em;
-    height: 3em;
-}
-
-.cat label span {
-    text-align: center;
-    padding: 3px 0;
-    display: block;
-}
-
-.cat label input {
-    position: absolute;
-    display: none;
-    color: #fff !important;
-}
-
-/* selects all of the text within the input element and changes the color of the text */
-.cat label input+span {
-    color: #fff;
-}
-
-/* This will declare how a selected input will look giving generic properties */
-.cat input:checked+span {
-    color: #ffffff;
-}
 
 .button {
+    display: inline-block;
     background-color: black;
     color: white;
     border: none;
     padding: 10px 20px;
-    margin-right: 10px;
     cursor: pointer;
     width: 100%;
     border-radius: 3px;
     transition: ease-in-out 0.3s;
+    margin: 10px 0;
+    margin-top: auto;
 
 }
 
 .button:hover {
-    background-color: #00dd88;
+    background-color: #00ce7f;
     color: white;
     transition: ease-in-out 0.3s;
     -webkit-transition: ease-in-out 0.3s;
     -moz-transition: ease-in-out 0.3s;
     -ms-transition: ease-in-out 0.3s;
     -o-transition: ease-in-out 0.3s;
+
 }
 
 .button.selected {
