--- a/style.css
+++ b/style.css
@@ -237,3 +237,35 @@ body {
 #account_number, #transactionId::placeholder {
     opacity: 0.5;
 }
+
+
+
+/*  shine effect*/
+
+  
+  .shalik_shine {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: 4px;
+    overflow: hidden;
+    /* background: linear-gradient(90deg, #000, #fff, #000); */
+    background: linear-gradient(90deg, #ffffff, #dd32ff, #ffffff);
+    
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+  }
+  
