--- a/style.css
+++ b/style.css
@@ -114,15 +114,19 @@ body {
     background-color: black;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 7px 20px;
     cursor: pointer;
     width: 100%;
-    border-radius: 3px;
+    border-radius: 5px;
     transition: ease-in-out 0.3s;
     margin: 10px 0;
     margin-top: auto;
-
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
+
 
 .button:hover {
     background-color: #00ce7f;
@@ -164,6 +168,28 @@ body {
     transition: ease-in-out 0.4s;
     border: none;
 }
+
+
+.card_place_order {
+  
+
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    transition: ease-in-out 0.4s;
+    border: none;
+}
+
+
+.card_place_order:hover {
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    transition: ease-in-out 0.4s;
+    -webkit-transition: ease-in-out 0.4s;
+    -moz-transition: ease-in-out 0.4s;
+    -ms-transition: ease-in-out 0.4s;
+    -o-transition: ease-in-out 0.4s;
+}
+
+
+
 
 .card:hover {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -243,29 +269,27 @@ body {
 /*  shine effect*/
 
   
-  .shalik_shine {
+.shalik_shine {
     position: relative;
     text-transform: uppercase;
-    font-size: 2em;
+    font-size: 3em;
     font-weight: 700;
     letter-spacing: 4px;
     overflow: hidden;
-    /* background: linear-gradient(90deg, #000, #fff, #000); */
-    background: linear-gradient(90deg, #ffffff, #dd32ff, #ffffff);
-    
+    background: linear-gradient(90deg, #ffffff, #ff3298, #ffffff);
     background-repeat: no-repeat;
     background-size: 80%;
-    animation: animate 3s linear infinite;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0);
-  }
-  
-  @keyframes animate {
+    -webkit-text-fill-color: transparent;
+    animation: animate 4s linear infinite;
+    -webkit-animation: animate 4s linear infinite;
+}
+
+@keyframes animate {
     0% {
-      background-position: -500%;
+        background-position: -500%;
     }
     100% {
-      background-position: 500%;
+        background-position: 500%;
     }
-  }
-  
+}
