--- a/style.css
+++ b/style.css
@@ -293,3 +293,9 @@ body {
         background-position: 500%;
     }
 }
+
+
+.navbar{
+    background-color: #ffffff;
+    box-shadow: rgba(27, 31, 35, 0.089) 0px 5px 10px -5px, rgba(255, 255, 255, 0.185) 0px 1px 0px inset;
+}
