--- a/style.css
+++ b/style.css
@@ -299,3 +299,86 @@ body {
     background-color: #ffffff;
     box-shadow: rgba(27, 31, 35, 0.089) 0px 5px 10px -5px, rgba(255, 255, 255, 0.185) 0px 1px 0px inset;
 }
+
+
+.footer{
+    background-color: rgb(247, 240, 255);
+}
+
+
+
+.map{
+    width: 100%;
+    height: 600px;
+ }
+ 
+ 
+ 
+ 
+ 
+ 
+ .ico-box{
+    background-color: #cb8cff7e;
+    border: none;
+    border-radius: 100%;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    font-size: 1.3rem;
+    transition: ease-in-out 0.4s;
+    border-radius: 2px;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+}
+ .ico-box:hover{
+    background-color: #9900ff;
+    border: none;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    font-size: 1.3rem;
+    transition: ease-in-out 0.4s;
+    -webkit-transition: ease-in-out 0.4s;
+    -moz-transition: ease-in-out 0.4s;
+    -ms-transition: ease-in-out 0.4s;
+    -o-transition: ease-in-out 0.4s;
+}
+ 
+ .footer-text{
+    color: rgb(217, 184, 255);
+    transition: ease-in-out 0.4s;
+ }
+ .footer-text:hover{
+    color: #b24fff;
+    transition: ease-in-out 0.4s;
+    cursor: pointer;
+    -webkit-transition: ease-in-out 0.4s;
+    -moz-transition: ease-in-out 0.4s;
+    -ms-transition: ease-in-out 0.4s;
+    -o-transition: ease-in-out 0.4s;
+}
+ 
+ 
+ 
+ .icon{
+    color: #fd408f;
+    font-size: 4rem;
+    transition: ease-in-out 0.4s;
+    
+ }
+
+ 
+ 
+ 
+ 
+ .circle-box {
+ background-color: white;
+ height: 150px;
+ width: 150px;
+ border-radius: 100%;
+ }
+ 
+ 
+ 
