fixed nav cart calculation without delivery charges

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 
 .button {
     display: inline-block;
-    background-color: black;
+    background-color: #15012c;
     color: white;
     border: none;
     padding: 7px 20px;
