--- a/style.css
+++ b/style.css
@@ -431,7 +431,7 @@ body {
 }
 
 .quantity-input {
-    width: 100px;
+    width: 80px;
     border: none;
     text-align: center;
 }
@@ -444,4 +444,18 @@ body {
 
 .price-table{
     width: 100px;
+}
+
+.btn-x-mark{
+    border: none;
+    border-radius: 50px;
+    padding: 0px;
+    height: 25px;
+    width: 25px;
+    background-color: #ff326f;
+    color: white;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
 }
