--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 
 .button {
     display: inline-block;
-    background-color: #15012c;
+    background-color:#15012c ;
     color: white;
     border: none;
     padding: 7px 20px;
@@ -129,7 +129,7 @@ body {
 
 
 .button:hover {
-    background-color: #00ce7f;
+    background-color: #7800d4;
     color: white;
     transition: ease-in-out 0.3s;
     -webkit-transition: ease-in-out 0.3s;
@@ -431,10 +431,18 @@ body {
 }
 
 .quantity-input {
-    width: 80px;
-    border: none;
+    width: 60px;
+    border: 2px solid rgb(237, 192, 255);
+    border-radius: 50px;
     text-align: center;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+
 }
+
+
 .subtotal {
     width: 100px;
 }
@@ -458,4 +466,21 @@ body {
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
+}
+
+.c-badge{
+    background-color: #ff326f;
+    color: white;
+    font-size: small;
+    font-weight: 400;
+    font-family: inter;
+}
+
+
+
+
+
+.fa-basket-shopping{
+    font-size: 22px;
+    color: #891adf;
 }
