--- a/style.css
+++ b/style.css
@@ -492,3 +492,9 @@ body {
     color: #891adf;
    
 }
+
+.form-control:focus {
+    border-color: #de71ff;
+    box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.25);
+    transition: 0.4s ease-in-out;
+} 
