--- a/faq.css
+++ b/faq.css
@@ -9,6 +9,7 @@ font-weight: 600;
 
 .accordion-button:not(.collapsed) {
     color: var(--bs-accordion-active-color);
-    background-color: rgb(212, 159, 255);
+    color: aliceblue;
+    background-color: rgb(83, 0, 151);
     box-shadow: inset 0 calc(-1* var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
